--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@ckeditor/ckeditor5-adapter-ckfinder": "^27.0.0",
     "@ckeditor/ckeditor5-build-classic": "^27.0.0",
     "@ckeditor/ckeditor5-ckfinder": "^20.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^27.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.0",
     "ckeditor5-build-classic-mathtype": "^1.0.0",
+    "ckeditor5-math-preview": "^8.0.0",
     "postcss": "^8.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
+    "react-mathjax-preview": "^2.2.3",
     "react-mathjax3": "0.0.3",
     "react-redux": "^7.2.3",
     "react-redux-i18n": "^1.9.3",
