--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "axios": "^0.21.1",
     "normalize.css": "^8.0.1",
     "postcss-cli": "^8.3.1",
+    "react-highlight-words": "^0.17.0",
     "tailwindcss": "^2.1.1"
   }
 }
